use grpc-gatway to validate token
